--- a/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
+++ b/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
@@ -69,9 +69,7 @@
                                         </td>
                                         <td class="ew-150"></td>
                                         <td class="ew-150">
-                                            <span class="d-inline-block mr-5">
-                                                &#8377;
-                                            </span>
+                                            <span class="d-inline-block mr-5"> &#8377;</span>
                                             {{ account.get('amountValue').value | currency : "":"" }}
                                         </td>
                                         <td class="ew-150">
