--- a/src/app/admin/orders/components/quick-order/quick-order.component.html
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.html
@@ -1,8 +1,29 @@
 
   <div class="row">
+    <ng-container *ngFor="let item of unsavedOrderList; let i=index;">
+      <div class="col-xxxxl-3 col-xl-4">
+      <div class="quick_order_card not_saved" (click)="openQuickUpdate(item, 'unsaved', i)">
+        <div class="order_header">
+          <span class="header_title">#UNSAVED</span>
+          <div class="tables" *ngIf="item.tables.length > 0">
+            <span *ngFor="let t of item.tables">{{ t.tableId }}</span>
+          </div>
+        </div>
+        <div>---</div>
+        <div>
+          <span>{{ item.created_at | datex : 'DD-MM-YYYY' }}</span>
+          <span>{{ item.created_at | datex : 'hh:mm A' }}</span>
+        </div>
+        <div>
+          <span><span class="d-inline-block mr-5">&#8377;</span> {{ item.orderAmount | currency : "":"" }}</span>
+          <span>{{ item.selectedOrderType.orderType }}</span>
+        </div>
+      </div>
+    </div>
+    </ng-container>
     <ng-container *ngFor="let item of ongoingorders">
       <div class="col-xxxxl-3 col-xl-4">
-      <div class="quick_order_card not_saved" (click)="openQuickUpdate(item)">
+      <div class="quick_order_card" (click)="openQuickUpdate(item)">
         <div class="order_header">
           <span class="header_title">#{{item.id}}</span>
           <div class="tables" *ngIf="item.order_tables.length > 0">
