--- a/src/app/admin/orders/components/quick-order/quick-order.component.html
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.html
@@ -3,6 +3,9 @@
     <ng-container *ngFor="let item of unsavedOrderList; let i=index;">
       <div class="col-xxxxl-3 col-xl-4">
       <div class="quick_order_card not_saved" (click)="openQuickUpdate(item, 'unsaved', i)">
+        <div class="close_btn" (click)="removeUnsaved(i)">
+          <img src="assets/images/icons/CLOSE.svg" alt="">
+        </div>
         <div class="order_header">
           <span class="header_title">#UNSAVED</span>
           <div class="tables" *ngIf="item.tables.length > 0">
