--- a/src/app/admin/orders/components/quick-order/quick-order.component.scss
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.scss
@@ -11,6 +11,29 @@
     color: #1d2271;
     transform: scale(1);
     backface-visibility: hidden;
+    position: relative;
+
+    & .close_btn {
+          position: absolute;
+          top: -10px;
+          right: -10px;
+          cursor: pointer;
+          z-index: 1;
+          width: 10px;
+          width: 30px;
+          height: 30px;
+          padding: 4px;
+          border: 1px solid #1d2271;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          background-color: #fff;
+          justify-content: center;
+
+          & img {
+            width: 65%;
+          }
+    }
 
     &.not_saved {
       border: 1px solid #8e2e2e;
