--- a/src/app/admin/orders/components/quick-order/quick-order.component.html
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.html
@@ -25,7 +25,7 @@
     </div>
     </ng-container>
     <ng-container *ngFor="let item of ongoingorders">
-      <div class="col-xxxxl-3 col-xl-4">
+      <div class="col-sm-6 col-xl-4 col-xxxxl-3">
       <div class="quick_order_card" (click)="openQuickUpdate(item)">
         <div class="order_header">
           <span class="header_title">#{{item.id}}</span>
